# fuel-types

./: .gitignore  Cargo.toml  build.rs  build_config.yaml  package.json  tsconfig.json
migrations/: 1-blocks.sql  2-transactions.sql  3-inputs.sql  4-outputs.sql  5-receipts.sql  6-utxos.sql  7-accounts.sql  8-assets.sql
proto/: accounts.proto  assets.proto  blocks.proto  common.proto  inputs.proto  outputs.proto  pointers.proto  receipts.proto  transactions.proto  utxos.proto
src/: lib.rs  proto.rs
src/data_parser/: mod.rs
src/models/: mod.rs  sqlx_model.rs
src/primitives/: block_height.rs  mod.rs  wrapped_int.rs
src/proto/: accounts.rs  assets.rs  blocks.rs  common.rs  inputs.rs  outputs.rs  pointers.rs  receipts.rs  transactions.rs  utxos.rs
ts-types/: proto.js
ts-types/buf/: accounts_pb.ts  assets_pb.ts  blocks_pb.ts  common_pb.ts  inputs_pb.ts  outputs_pb.ts  pointers_pb.ts  receipts_pb.ts  transactions_pb.ts  utxos_pb.ts
ts-types/grpc/: accounts_pb.d.ts  accounts_pb.js  assets_pb.d.ts  assets_pb.js  blocks_pb.d.ts  blocks_pb.js  common_pb.d.ts  common_pb.js  inputs_pb.d.ts  inputs_pb.js  outputs_pb.d.ts  outputs_pb.js  pointers_pb.d.ts  pointers_pb.js  receipts_pb.d.ts  receipts_pb.js  transactions_pb.d.ts  transactions_pb.js  utxos_pb.d.ts  utxos_pb.js
ts-types/pbjs/: proto.d.ts  proto.js
ts-types/ts-proto/: accounts.ts  assets.ts  blocks.ts  common.ts  inputs.ts  outputs.ts  pointers.ts  receipts.ts  transactions.ts  utxos.ts
